--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="desktop-container">
                     <div class="hero-img">
-                        <img src="src/logo.svg" alt="Logo da empresa">
+                        <img src="src/logo.svg" alt="Logo da empresa" title="logo">
                     </div>
                     <div class="nav-wrapper flex-center">
                         <a href="#info">Lorem ipsum</a>
@@ -54,10 +54,10 @@
             </div>
             <div class="hero-bottom">
                 <div class="dropdown desktop">
-                    <img src="src/arrow.png" alt="flecha dropdown">
+                    <img src="src/arrow.png" alt="flecha dropdown" title="dropdown">
                 </div>
                 <div class="hero__img">
-                    <img src="src/logo.svg" alt="Lorem Ipsum logo" />
+                    <img src="src/logo.svg" alt="Lorem Ipsum logo" title="lorem ipsum logo"/>
                 </div>
             </div>
         </section>
@@ -81,7 +81,7 @@
         <section class="blocks flex-center">
             <div class="block block__1 flex-center">
                 <div class="block__img flex-center">
-                    <img src="src/target.svg" alt="Flecha acertando alvo em cheio" />
+                    <img src="src/target.svg" alt="Flecha acertando alvo em cheio" title="Flecha acertando alvo em cheio"/>
                 </div>
                 <div class="block__txt">
                     <h3>Lorem ipsum</h3>
@@ -94,7 +94,7 @@
             </div>
             <div class="block block__2 flex-center">
                 <div class="block__img">
-                    <img src="src/target.svg" alt="Flecha acertando alvo em cheio" />
+                    <img src="src/target.svg" alt="Flecha acertando alvo em cheio" title="Flecha acertando alvo em cheio"/>
                 </div>
                 <div class="block__txt">
                     <h3>Lorem ipsum</h3>
@@ -107,7 +107,7 @@
             </div>
             <div class="block block__3 flex-center">
                 <div class="block__img">
-                    <img src="src/target.svg" alt="Flecha acertando alvo em cheio" />
+                    <img src="src/target.svg" alt="Flecha acertando alvo em cheio" title="Flecha acertando alvo em cheio"/>
                 </div>
                 <div class="block__txt">
                     <h3>Lorem ipsum</h3>
@@ -120,7 +120,7 @@
             </div>
             <div class="block block__4 flex-center">
                 <div class="block__img">
-                    <img src="src/target.svg" alt="Flecha acertando alvo em cheio" />
+                    <img src="src/target.svg" alt="Flecha acertando alvo em cheio" title="Flecha acertando alvo em cheio"/>
                 </div>
                 <div class="block__txt">
                     <h3>Lorem ipsum</h3>
@@ -133,7 +133,7 @@
             </div>
             <div class="block block__5 flex-center">
                 <div class="block__img">
-                    <img src="src/target.svg" alt="Flecha acertando alvo em cheio" />
+                    <img src="src/target.svg" alt="Flecha acertando alvo em cheio" title="Flecha acertando alvo em cheio"/>
                 </div>
                 <div class="block__txt">
                     <h3>Lorem ipsum</h3>
@@ -146,7 +146,7 @@
             </div>
             <div class="block block__6 flex-center">
                 <div class="block__img">
-                    <img src="src/target.svg" alt="Flecha acertando alvo em cheio" />
+                    <img src="src/target.svg" alt="Flecha acertando alvo em cheio" title="Flecha acertando alvo em cheio"/>
                 </div>
                 <div class="block__txt">
                     <h3>Lorem ipsum</h3>
@@ -159,7 +159,7 @@
             </div>
             <div class="block__7 desktop flex-center block ">
                 <div class="block__img">
-                    <img src="src/target.svg" alt="Flecha acertando alvo em cheio" />
+                    <img src="src/target.svg" alt="Flecha acertando alvo em cheio" title="Flecha acertando alvo em cheio"/>
                 </div>
                 <div class="block__txt">
                     <h3>Lorem ipsum</h3>
@@ -172,7 +172,7 @@
             </div>
             <div class="block__8 desktop flex-center block ">
                 <div class="block__img">
-                    <img src="src/target.svg" alt="Flecha acertando alvo em cheio" />
+                    <img src="src/target.svg" alt="Flecha acertando alvo em cheio" title="Flecha acertando alvo em cheio"/>
                 </div>
                 <div class="block__txt">
                     <h3>Lorem ipsum</h3>
@@ -185,7 +185,7 @@
             </div>
             <div class="block__9 desktop flex-center block ">
                 <div class="block__img">
-                    <img src="src/target.svg" alt="Flecha acertando alvo em cheio" />
+                    <img src="src/target.svg" alt="Flecha acertando alvo em cheio" title="Flecha acertando alvo em cheio"/>
                 </div>
                 <div class="block__txt">
                     <h3>Lorem ipsum</h3>
@@ -198,7 +198,7 @@
             </div>
             <div class="block__10 desktop flex-center block ">
                 <div class="block__img">
-                    <img src="src/target.svg" alt="Flecha acertando alvo em cheio" />
+                    <img src="src/target.svg" alt="Flecha acertando alvo em cheio" title="Flecha acertando alvo em cheio"/>
                 </div>
                 <div class="block__txt">
                     <h3>Lorem ipsum</h3>
@@ -227,7 +227,7 @@
                         <button>Lorem ipsum</button>
                     </div>
                     <div class="info-card__img">
-                        <img src="src/hands.svg" alt="Logo redondo de mão juntas" />
+                        <img src="src/hands.svg" alt="Logo redondo de mão juntas" title="Logo redondo de mãos juntos"/>
                     </div>
 
                 </div>
@@ -245,7 +245,7 @@
                         <button>Lorem ipsum</button>
                     </div>
                     <div class="info-card__img">
-                        <img src="src/shield.svg" alt="Logo redondo de escudo" />
+                        <img src="src/shield.svg" alt="Logo redondo de escudo" title="Logo redondo de escudo"/>
                     </div>
                 </div>
                 <hr />
@@ -262,7 +262,7 @@
                         <button>Lorem ipsum</button>
                     </div>
                     <div class="info-card__img">
-                        <img src="src/note.svg" alt="Logo redondo de notebook" />
+                        <img src="src/note.svg" alt="Logo redondo de notebook" title="Logo redondo de notebook"/>
                     </div>
                 </div>
             </div>
@@ -329,12 +329,12 @@
             <div class="footer">
                 <div class="flex-center">
                     <div class="img-wrapper">
-                        <img src="src/logo-no-name.png" alt="Logo da empresa">
-                        <img src="src/company-name.png" alt="Nome da empresa">
+                        <img src="src/logo-no-name.png" alt="Logo da empresa" title="lorem ipsum logo">
+                        <img src="src/company-name.png" alt="Nome da empresa" title="lorem ipsum logo">
                     </div>
                     <div class="second-logo">
-                        <img src="src/logo-no-name.png" alt="Logo da empresa">
-                        <img src="src/company-name.png" alt="Nome da empresa">
+                        <img src="src/logo-no-name.png" alt="Logo da empresa" title="lorem ipsum logo">
+                        <img src="src/company-name.png" alt="Nome da empresa" title="lorem ipsum logo">
                     </div>
                 </div>
                 <p>© Copyright Ingram Micro Brasil 2018</p>
